  [maurits]

- Remove ``products`` recipe option and special handling of ``Products`` namespace.
  Zope 4 and higher no longer have the concept of a products directory.
  You can still use ``packages = path/to/products_dir Products`` if you need something similar.
  [maurits]

- Require at least Python 3.9.
  [maurits]


1.1.1 (2025-02-12)
==================

- Remove setuptools fossils.
  [maurits]


1.1.0 (2021-12-01)
==================

- Fix 2to3 old setuptools hook [goschtl]
- mordernize to python3 code [goschtl]
- update to new zope.testing [goschtl]
- use pytest and tox [goschtl]
- Note: tested on Python 2.7 and 3.6-3.10.

1.0.0 (2020-08-03)
==================

- Fix to run under Windows with Python 3.
  [nilshofer, jensens]

0.16 (2013-02-18)
=================

- Fix packaging error.
  [davisagli]

- Fix tests to work with buildout 2.
  [davisagli]

0.15 (2012-05-12)
=================

- Integration with Travis CI for running tests and pep8/pyflakes.
  [hvelarde]

- PEP 8/Pyflakes.
  [hvelarde]

- Optimized unlinking of junctioned dirs on Windows.
  [lck]

0.14 (2012-04-30)
=================

- Change the approach to building the omelette using NTFS junctions
  on Windows. This is now done via the ``ntfsutils`` package, rather
  than relying on junction.exe.
  [lck]

0.13 (2012-04-14)
=================

- Added forward-compatibility with Python 3.
  [mitchell]

0.12 (2011-09-08)
=================

- Replaced os.popen with subprocess equivalent
  [tom_gross]

- Quote path on windows to handle paths with spaces correctly
  [tom_gross]

0.11 (2011-07-18)
=================

- Sort top_level metadata to avoid error building omelette if they are out of
  order.  Fixes https://bugs.launchpad.net/collective.buildout/+bug/553005.
  Thanks to Leonardo Rochael Almeida.
  [davisagli]

0.10 (2010-11-22)
=================

- Provide an update function (equivalent to install) to avoid spurious "recipe
  "doesn't define an update method" warning.
  [davisagli]
